tools/intel_gpu_frequency: fix usage and examples

The cited commit removed --get suboptions but failed to update the usage
and examples. Remove the duplicated examples from the comments in the
interest of if not single but at least fewer points of truth.

Fixes: 20d6e0f41b3b ("tools/intel_gpu_frequency: remove use of getsubopt")
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99492
Reported-by: Andreas Reis <andreas.reis@gmail.com>
Reviewed-by: Radoslaw Szwichtenberg <radoslaw.szwichtenberg@intel.com>
Signed-off-by: Jani Nikula <jani.nikula@intel.com>